--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "apollo-boost": "^0.1.4",
     "expo": "^26.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
+    "native-base": "^2.4.1",
     "react": "16.3.0-alpha.1",
     "react-apollo": "^2.1.3",
     "react-native": "0.54.0",
