--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "apollo-boost": "^0.1.4",
+    "apollo-link-context": "^1.0.7",
     "expo": "^26.0.0",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
